--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+$primary-color: #01579b;
+.jumbotron{
+    padding-top: 0px;
+    background: #fff;
+}
+
+.form-control,.input-group-text{
+    border:1px solid $primary-color;
+}
+
+table.table-hover tbody tr:hover{
+cursor: pointer;
+}
