OrderItem popup model UI & Services done

--- a/src/app/orders/order-items/order-items.component.html
+++ b/src/app/orders/order-items/order-items.component.html
@@ -1,1 +1,38 @@
-<p>order-items works!</p>
+<h4 class="display-4">Order Food Item</h4>
+<hr>
+<form #form="ngForm" autocomplete="off">
+    <div class="form-group">
+        <label>Food Item: </label>
+        <select name="item_id" #item_id="ngModel" [(ngModel)]="formData.item_id" class="form-control">
+            <option value="0">-Select-</option>
+        </select>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Price: </label>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">$</div>
+                </div>
+                <input name="item_price" #item_price="ngModel" [(ngModel)]="formData.item_price" class="form-control" readonly>
+            </div>
+        </div>
+        <div class="form-group col-md-6">
+            <label>Quantity: </label>
+            <input name="quantity" #quantity="ngModel" [(ngModel)]="formData.quantity" class="form-control">
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Total: </label>
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <div class="input-group-text">$</div>
+            </div>
+            <input name="total" #total="ngModel" [(ngModel)]="formData.total" class="form-control" readonly>
+        </div>
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-dark"><i class="fa fa-database"></i> Submit</button>
+        <button type="button" class="btn btn-outline-dark ml-1"><i class="fa fa-close"></i> Close</button>
+    </div>
+</form>
