--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,5 @@ $primary-color: #01579b;
 table.table-hover tbody tr:hover{
 cursor: pointer;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
