Items-API get method, item model class

--- a/src/app/orders/order-items/order-items.component.html
+++ b/src/app/orders/order-items/order-items.component.html
@@ -5,6 +5,8 @@
         <label>Food Item: </label>
         <select name="item_id" #item_id="ngModel" [(ngModel)]="formData.item_id" class="form-control">
             <option value="0">-Select-</option>
+            <option *ngFor="let item of itemList" value="{{item.item_id}}">{{item.item_name}}</option>
+
         </select>
     </div>
     <div class="form-row">
