--- a/src/app/orders/order-items/order-items.component.html
+++ b/src/app/orders/order-items/order-items.component.html
@@ -1,12 +1,14 @@
 <h4 class="display-4">Order Food Item</h4>
 <hr>
-<form #form="ngForm" autocomplete="off">
+<form #form="ngForm" autocomplete="off" (submit)="onSubmitAction(form)">
+    <input type="hidden" name="order_item_id" #order_item_id="ngModel" [(ngModel)]="formData.order_item_id">
+    <input type="hidden" name="order_id" #order_id="ngModel" [(ngModel)]="formData.order_id">
+    <input type="hidden" name="item_name" #item_name="ngModel" [(ngModel)]="formData.item_name">
     <div class="form-group">
         <label>Food Item: </label>
-        <select name="item_id" #item_id="ngModel" [(ngModel)]="formData.item_id" class="form-control">
+        <select name="item_id" #item_id="ngModel" [(ngModel)]="formData.item_id" class="form-control" (change)="updatePriceAction($event.target)" [class.is-invalid]="!isValid && formData.item_id==0">
             <option value="0">-Select-</option>
             <option *ngFor="let item of itemList" value="{{item.item_id}}">{{item.item_name}}</option>
-
         </select>
     </div>
     <div class="form-row">
@@ -21,7 +23,8 @@
         </div>
         <div class="form-group col-md-6">
             <label>Quantity: </label>
-            <input name="quantity" #quantity="ngModel" [(ngModel)]="formData.quantity" class="form-control">
+            <input name="quantity" #quantity="ngModel" [(ngModel)]="formData.quantity" class="form-control"
+            (keyup)="updateTotal()" [class.is-invalid]="!isValid && formData.quantity==0">
         </div>
     </div>
     <div class="form-group">
@@ -35,6 +38,6 @@
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-dark"><i class="fa fa-database"></i> Submit</button>
-        <button type="button" class="btn btn-outline-dark ml-1"><i class="fa fa-close"></i> Close</button>
+        <button type="button" class="btn btn-outline-dark ml-1" [mat-dialog-close]><i class="fa fa-close"></i> Close</button>
     </div>
 </form>
